--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #f30000;
   text-decoration: none;
 }
 
@@ -48,6 +48,7 @@
 .title,
 .description {
   text-align: center;
+  color: #1c2617;
 }
 
 .description {
@@ -76,7 +77,7 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
